{
    "name": "GameInput",
    "maps": [
        {
            "name": "InGame",
            "id": "e8cfa764-6b0c-4247-843f-3d65565de998",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "ce4b258b-f238-4745-8af6-9c99feadaa7f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "4e2443e7-14c5-4550-9714-72a1ee272df4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Q",
                    "type": "Button",
                    "id": "fbc7ef6e-e0d5-4439-8d3e-1db634b404be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "S",
                    "type": "Button",
                    "id": "19a717fa-ba22-4868-ae6c-fbc0e41a5007",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a53d8e1-ee08-4f9f-9ed4-f3fbf8ffa857",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1be0d10-be05-4d4e-97b1-c47871eb057a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "001e5b25-058e-43d7-905a-d7f7c85a7873",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Q",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6f46ebd-b88e-4099-8f5c-867074af32eb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "S",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}